tests/invalid/streaming/missing_separator.fred
---
1989-10-14
---
true
